--- a/style_sheet_main.css
+++ b/style_sheet_main.css
@@ -1,213 +1,188 @@
-* {
-    box-sizing: border-box;
+html {
+    background-image: linear-gradient(350deg, hsla(120, 100%, 35%, .7), hsla(204, 100%, 80%, .7), hsla(270, 100%, 80%, .7));
+    background-size: cover;
 }
 
-.main-body {
-    border: 10px solid black;
-    border-radius: 10px;
-    background-image: url(imgs/web_back.jpg);
-    background-size: contain;
-    background-repeat:repeat-y;
-
+.header-container {
+    display: grid;
+    background-image: linear-gradient(33deg, #c9f, hsl(65, 70%, 60%));
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+    min-width: 75%;
+    width: 100%;
+    max-height: 10em;
+    min-height: 6em;
+    border: 2px solid silver;
+    border-radius: 15px;
+    margin: auto;
+}
+.million-project {
+    background-image: url("https://fractalenlightenment.com/wp-content/uploads/2014/09/infinite-time.webp");
 }
 
-.centered {
-
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 15px 15px;
-    height: 450px;
-    width: 400px;
+.shotglasses {
+    background-image: url("projects/shotglass/imgs/bckgrnd.jpg");
 }
 
-.projects {
+#profilepic {
+    justify-self: center;
+    grid-column: 2/ 5;
+    grid-row: 1 / 3;
+    height: 10em;
+}
 
-    border: 2px solid black;
-    border-radius: 10px;
-    background-color: bisque;
-    font-weight: 100;
-    font-size: 15px;
-    font-family: Geneva;
-    line-height: 20px;
-    padding-bottom: 25px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+#profilepic:hover {
     width: 70%;
-    opacity: 75%;
-
+    height: 80%;
+    overflow: hidden;
+    z-index: 80;
 }
 
-.aboutme {
 
-    border: 2px solid black;
-    border-radius: 10px;
-    background-color: bisque;
-    font-weight: 100;
-    font-size: 15px;
-    font-family: Geneva;
-    line-height: 20px;
-    padding-bottom: 25px;
+.text {
+    color: #ffe066;
+    font-family: Helvetica, sans-serif;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    opacity: 75%;
 }
 
-.hobbs {
-
-    border:2px solid black;
-    border-radius: 10px;
-    background-color: bisque;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    opacity: 75%;
-}
-
-.small-text {
-
-    border: 2px solid black;
-    border-radius: 10px;
-    background-color: silver;
-    font-size: 15px;
-    border-width: 50%;
-    opacity: 90%;
-}
-
-.large-text {
-
-    border: 5px solid darkslategray;
-    background-color: royalblue;
-    border-width: 50%;
-    border-radius: 10px;
-    font-family: cursive;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70;
-    opacity: 75%;
-
-}
-.linkage {
-
-    color: darkred;
-
-}
-
-.linkage:visited {
-
-    color: crimson;
-}
-
-h1 {
-    color: rebeccapurple;
+.header-container h1 {
     font-size: 35px;
+    font-family: Georgia, serif;
+}
+.nav-container {
+    display: grid;
+    align-content: center;
+    min-width: 20%;
+    max-width: 90%;
+    padding: 5px;
+    height: 3em;
+    border: 2px solid goldenrod;
+    border-radius: 26px;
+    margin: auto;
+}
+
+ul.navigation li {
+    display: inline;
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 10px;
-    opacity: 75%;
+    list-style: none;
+    font-size: 16px;
 }
 
-h3 {
-
-    color: azure;
-    font-family: Geneva, cursive;
-    font-size: 40px;
-    font-weight: 100;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75%;
-    opacity: 75%;
-    min-width: 400px;
-    max-width: 1200px;
-
-}
-
-p {
-    color: purple;
-    font-size: 20px;
-    font-family:'Times New Roman', Times, serif;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    line-height: 22px;
-    padding: 12px;
-    min-width: 400px;
-    max-width: 1200px;
-}
-
-p:hover{
-    background-color: darkgray;
-}
-
-ol {
-
+ul.navigation li:after {
+    padding: 4px;
     color: black;
-    list-style: lower-roman;
-    font-weight: 100;
-    font-size: 20px;
-    font-family: Geneva;
-    line-height: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    content: " >-<";
+    font-weight: 600;
+}
+
+.project-container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 10% repeat(4, 1fr);
+    gap: 1em;
+    justify-content: stretch;
+    min-width: 25%;
+    max-width: 95%;
+    height: 3em;
+    max-height: 40em;
+    border: 2px solid silver;
+    border-radius: 20px;
+    margin: auto;
+    overflow: hidden;
+}
+
+.project-container:hover {
+
+    height: 40em;
+    transition: height 2s ease-out;
+}
+
+
+.project-container h3 {
+    color: yellowgreen;
+    font-size: 30px;
+    grid-column: 1 / 7;
+    justify-self: center;
     text-align: center;
-    width: 70%;
+}
+
+.image-container {
+    min-width: 200px;
+    min-height: 200px;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 20px;
+}
+
+#img1 {
+    justify-self: center;
+    grid-column: 5 / 7;
+    grid-row: 2 / 4;
     
-
 }
 
-ol:hover {
-    background-color: darkcyan;
+#img2 {
+    justify-self: center;
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
 }
 
-ul {
-
-    color: green;
-    list-style: square;
-    font-weight: 100;
-    font-size: 15px;
-    font-family: Geneva;
-    line-height: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    text-align: center;
-
-
-
+#img3 {
+    justify-self: center;
+    grid-column: 2 / 4;
+    grid-row: 4 / 6;
 }
 
-ul:hover {
-    background-color: darkcyan;
+#img4 {
+    justify-self: center;
+    grid-column: 4 / 6;
+    grid-row: 4 / 6;
 }
 
-.contact {
-    background-color: royalblue;
-    border: 2px dotted black;
-    border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
+#img2-1 {
+        justify-self: center;
+        grid-column: 1 / 3;
+        grid-row: 2 / 4;
 }
 
-.contact td {
+.radi {
+    border-radius: 20px;
+}
 
-    color: black;
-    font-size: 11px;
-    font-weight: 100;
-    font-family: Geneva;
-    line-height: 12px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 10%
+#prototypetext {
+    padding: .5em;
+    background-image: linear-gradient(45deg, hsl(338, 69%, 23%), hsl(247, 5%, 46%));
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+}
+
+#microcontrollertext {
+    padding: .5em;
+    background-image: linear-gradient(-45deg, hsl(247, 5%, 46%),  hsl(338, 69%, 23%));
+    grid-column: 4 / 5;
+    grid-row: 2 / 4;
+    overflow-y: scroll;
+}
+
+#displayimgtext {
+    padding: .5em;
+    background-image: linear-gradient(168deg, hsl(63, 84%, 35%), hsl(272, 69%, 38%));
+    grid-column: 1 / 2;
+    grid-row: 4 / 6;
+}
+
+#finishedtext {
+    padding: .5em;
+    background-image: linear-gradient(101deg, hsl(196, 60%, 70%), hsl(96, 80%, 40%));
+    grid-column: 6 / 7;
+    grid-row: 4 / 6;
+    overflow-y: scroll;
+}
+
+#earlyplatformtext {
+    padding: .5em;
+    background-image: linear-gradient(87deg, hsl(10, 95%, 29%), hsl(165, 59%, 40%));
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
 }
