--- a/style_sheet_main.css
+++ b/style_sheet_main.css
@@ -1,5 +1,5 @@
-html {
-    background-image: linear-gradient(350deg, hsla(120, 100%, 35%, .7), hsla(204, 100%, 80%, .7), hsla(270, 100%, 80%, .7));
+body{
+    background-image: linear-gradient(350deg, hsla(100, 100%, 35%, .7), hsla(204, 100%, 80%, .7), hsla(270, 100%, 80%, .7));
     background-size: cover;
 }
 
